--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "passport": "^0.5.2",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
-    "passport-twitter": "^1.0.4"
+    "passport-twitter": "^1.0.4",
+    "react": "^18.1.0"
   }
 }
