--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/TanyaDT/Tempting-Pastry#readme",
   "dependencies": {
+    "@emailjs/browser": "^3.6.2",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
