--- a/client/package.json
+++ b/client/package.json
@@ -11,19 +11,20 @@
     "@mui/material": "^5.6.4",
     "@mui/styled-engine-sc": "^5.6.1",
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^12", 
+    "@testing-library/react": "^12",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
-    "react": "^17",
-    "react-dom": "^17",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
-    "styled-components": "^5.3.5",
+    "bootstrap": "^5.1.3",
     "mdb-react-ui-kit": "git+https://oauth2:K341sA2MiheMbaU_MGoF@git.mdbootstrap.com/mdb/react/mdb5/prd/mdb5-react-ui-kit-pro-essential",
     "mdb-ui-kit": "^4.0.0",
-    "bootstrap": "^5.1.3",
+    "react": "^17",
     "react-bootstrap": "^2.3.1",
+    "react-dom": "^17",
+    "react-router-dom": "^6.3.0",
+    "react-router-hash-link": "^2.4.3",
+    "react-scripts": "5.0.1",
     "sass": "^1.51.0",
+    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
