--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "http-proxy-middleware": "^2.0.6",
     "mdb-react-ui-kit": "git+https://oauth2:K341sA2MiheMbaU_MGoF@git.mdbootstrap.com/mdb/react/mdb5/prd/mdb5-react-ui-kit-pro-essential",
     "mdb-ui-kit": "^4.0.0",
     "react": "^17",
@@ -22,7 +23,7 @@
     "react-dom": "^17",
     "react-router-dom": "^6.3.0",
     "react-router-hash-link": "^2.4.3",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "5.0.1",
     "sass": "^1.51.0",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
