--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/TanyaDT/Tempting-Pastry#readme",
   "dependencies": {
     "@emailjs/browser": "^3.6.2",
+    "@sendgrid/mail": "^7.7.0",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
@@ -34,6 +35,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "express-session": "^1.17.2",
+    "googleapis": "^100.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.1",
     "nodemailer": "^6.7.5",
@@ -41,6 +43,7 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.4",
-    "react": "^17" 
-  } 
+    "react": "^17",
+    "react-google-login": "^5.2.2"
+  }
 }
