--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "googleapis": "^100.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.1",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.7.5",
     "passport": "^0.5.2",
     "passport-google-oauth20": "^2.0.0",
