--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
+    "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@material-ui/core": "^4.12.4",
@@ -17,15 +18,17 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "html-react-parser": "^1.4.14",
+    "i": "^0.3.7",
     "mdb-react-ui-kit": "git+https://oauth2:K341sA2MiheMbaU_MGoF@git.mdbootstrap.com/mdb/react/mdb5/prd/mdb5-react-ui-kit-pro-essential",
     "mdb-ui-kit": "^4.0.0",
+    "npm": "^8.12.1",
     "react": "^17",
     "react-bootstrap": "^2.3.1",
     "react-dom": "^17",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-router-hash-link": "^2.4.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
     "sass": "^1.51.0",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
