--- a/package.json
+++ b/package.json
@@ -22,7 +22,12 @@
   },
   "homepage": "https://github.com/TanyaDT/Tempting-Pastry#readme",
   "dependencies": {
+    "-": "^0.0.1",
     "@emailjs/browser": "^3.6.2",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "@sendgrid/mail": "^7.7.0",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
@@ -36,10 +41,13 @@
     "express": "^4.18.1",
     "express-session": "^1.17.2",
     "googleapis": "^100.0.0",
+    "http": "^0.0.1-security",
+    "js": "^0.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.7.5",
+    "parser": "^0.1.4",
     "passport": "^0.5.2",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
