--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
+    "@emailjs/browser": "^3.6.2",
     "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
@@ -12,12 +13,11 @@
     "@mui/material": "^5.6.4",
     "@mui/styled-engine-sc": "^5.6.1",
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^12.1.5",
+    "@testing-library/react": "^12",
     "@testing-library/user-event": "^13.5.0",
     "@tinymce/tinymce-react": "github:tinymce/tinymce-react",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
-    "jest": "^28.1.1",
     "html-react-parser": "^1.4.14",
     "i": "^0.3.7",
     "mdb-react-ui-kit": "git+https://oauth2:K341sA2MiheMbaU_MGoF@git.mdbootstrap.com/mdb/react/mdb5/prd/mdb5-react-ui-kit-pro-essential",
@@ -29,8 +29,7 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-router-hash-link": "^2.4.3",
-    "react-scripts": "5.0.1",
-    "react-test-renderer": "^17.0.2",
+    "react-scripts": "2.1.3",
     "sass": "^1.51.0",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
